--- a/mobile-reordering/index.html
+++ b/mobile-reordering/index.html
@@ -7,9 +7,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+
   <div class="wrapper">
-    
+
     <header class="top">
       <h1><a href="#">What The Flexbox?!</a></h1>
     </header>
@@ -39,7 +39,7 @@
     </nav>
 
     <section class="hero">
-      <img src="http://lorempixel.com/1000/600/abstract">
+      <img src="https://picsum.photos/1000/600">
     </section>
 
     <section class="details">
@@ -64,7 +64,7 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script>
-    
+
     $(function() {
       $('.toggleNav').on('click',function() {
         $('.flex-nav ul').toggleClass('open');
